[project]
name = "flux_lora_merger"
description = "A custom ComfyUI node to merge up to 4 LoRA models into a Flux.1-Dev UNet"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Flux_Lora_Merger"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Flux_Lora_Merger"
Icon = ""
