[project]
name = "comfyui-flux-lora-merger"
description = "Advanced LoRA merging node for ComfyUI (additive, average, sequential)"
version = "1.0.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Flux_Lora_Merger"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Flux LoRA Merger"
Icon = "https://github.com/tritant/ComfyUI_Flux_Lora_Merger/blob/main/icon.png"
